* New:   - Added new path [/api/photos/lastest] to get last five photos uploaded   - small changes to fix controller
