# docs/openapi.yaml
@@ -806,7 +806,7 @@ paths:
               $ref: '#/components/schemas/Vote'
       responses:
         '200':
-          description: 'OK'
+          description: OK
           content:
             application/json:
               examples:
@@ -822,7 +822,7 @@ paths:
                         "CaptionId": 3
                     }
         '201':
-          description: "created"
+          description: created
           content:
             application/json:
               examples:
@@ -841,6 +841,70 @@ paths:
           description: Default error sample response
       tags:
         - Votes
+  /api/photos/lastest:
+    summary: Viiew last  five added photos
+    get:
+      summary: Get five lastest photos added  to database
+      description: ''
+      operationId: photos_lastest
+      responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                'Lastest five photos ':
+                  value: |-
+                    [
+                        {
+                            "id": 26,
+                            "filename": "c7cde4eb-e600-4fdc-add3-759e79c6260f.jpeg",
+                            "user_id": 1,
+                            "createdAt": "2023-05-24T01:15:12.934Z",
+                            "updatedAt": "2023-05-24T01:15:12.934Z",
+                            "UserId": 1,
+                            "image_url": "http://localhost:3000/images//c7cde4eb-e600-4fdc-add3-759e79c6260f.jpeg"
+                        },
+                        {
+                            "id": 27,
+                            "filename": "b04f998f-3ee1-4177-843f-a5ecd2d8de0e.com - 345427 blonde_hair blush brown_hair dress hat link_(zelda) long_hair male pointed_ears princess_zelda short_hair signed the_legend_of_zelda tiara tokuura",
+                            "user_id": 1,
+                            "createdAt": "2023-05-25T01:46:09.617Z",
+                            "updatedAt": "2023-05-25T01:46:09.617Z",
+                            "UserId": 1,
+                            "image_url": "http://localhost:3000/images//b04f998f-3ee1-4177-843f-a5ecd2d8de0e.com - 345427 blonde_hair blush brown_hair dress hat link_(zelda) long_hair male pointed_ears princess_zelda short_hair signed the_legend_of_zelda tiara tokuura"
+                        },
+                        {
+                            "id": 28,
+                            "filename": "a4fac7b0-9e21-48f7-afd4-71b63ef6f648.com - 290544 gun long_hair mecha nfb-zmc original pantyhose weapon",
+                            "user_id": 1,
+                            "createdAt": "2023-05-25T01:46:43.090Z",
+                            "updatedAt": "2023-05-25T01:46:43.090Z",
+                            "UserId": 1,
+                            "image_url": "http://localhost:3000/images//a4fac7b0-9e21-48f7-afd4-71b63ef6f648.com - 290544 gun long_hair mecha nfb-zmc original pantyhose weapon"
+                        },
+                        {
+                            "id": 29,
+                            "filename": "1fa3e947-bb54-410e-ac97-5801a51a2bc6.com - 304715 black_hair bra choker green_eyes headphones jpeg_artifacts nababa navel original short_hair shorts skintight underwear wristwear (1)",
+                            "user_id": 1,
+                            "createdAt": "2023-05-25T01:47:26.487Z",
+                            "updatedAt": "2023-05-25T01:47:26.487Z",
+                            "UserId": 1,
+                            "image_url": "http://localhost:3000/images//1fa3e947-bb54-410e-ac97-5801a51a2bc6.com - 304715 black_hair bra choker green_eyes headphones jpeg_artifacts nababa navel original short_hair shorts skintight underwear wristwear (1)"
+                        },
+                        {
+                            "id": 30,
+                            "filename": "e56187ce-3b1a-48da-bd41-1ca39a0775a6.com - 300543 aqua_eyes armor blonde_hair blush cape chinchongcha dress headdress long_hair necklace pointed_ears princess_zelda signed watermark wristwear",
+                            "user_id": 1,
+                            "createdAt": "2023-05-25T01:47:58.022Z",
+                            "updatedAt": "2023-05-25T01:47:58.022Z",
+                            "UserId": 1,
+                            "image_url": "http://localhost:3000/images//e56187ce-3b1a-48da-bd41-1ca39a0775a6.com - 300543 aqua_eyes armor blonde_hair blush cape chinchongcha dress headdress long_hair necklace pointed_ears princess_zelda signed watermark wristwear"
+                        }
+                    ]
+        default:
+          description: Default error sample response
+      tags:
+        - Photos
 components:
   schemas:
     Login:
